# DTMF_gen

./: .gitignore  CMakeLists.txt  DTMF_GEN.sln  DTMF_GEN.vcxproj  DTMF_GEN.vcxproj.filters  README.md  b.out  dtmf.c  dtmf.h  log.txt  testdtmf.c  wave_gen.c
Debug/: DTMF_GEN.exe.recipe  DTMF_GEN.ilk  DTMF_GEN.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/DTMF_GEN.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DTMF_GEN.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: CMakeLists.txt  dtmf.c  dtmf.c:Zone.Identifier  dtmf.h  main.c  main.h  main.wave  main_gen  main_gen.c  testdtmf.c  wave.c  wave.h
